bin/tests/errors_parser/parser/parser_err_expected_sep_stmt.swg
#global fileprivate

#assert(true) #assert(true) // swc-expected-error {{parser_err_expected_sep_stmt}}
